<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".VendorLoginActivity">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginLeft="24dp"
            android:src="@drawable/ic_wrench"></ImageView>
        //Vendor Login Title

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Vendor Login"
                android:textSize="15pt"></TextView>
        </LinearLayout>


        //Login Form

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#248E8C8C"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:hint="Email-ID"
                android:inputType="textEmailAddress"
                android:padding="20dp"></EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#248E8C8C"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="20dp"></EditText>
        </LinearLayout>

        //login button

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttonColor"
                android:text="Login"></Button>


        </LinearLayout>
        //Forgot password link

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/forgot_password"></TextView>


        </LinearLayout>

        //Registration Link

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/not_registered"></TextView>

            <TextView
                android:id="@+id/start_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:onClick="onClick"
                android:clickable="true"></TextView>

        </LinearLayout>


    </LinearLayout>
</ScrollView>